<resources>
    <string name="app_name">EPOD</string>
    <string name="delivery_plan">Delivery Plan</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="version">Version</string>
    <string name="serial">Serial Number</string>
    <string name="truck">Truck</string>
    <string name="employee_id">Employee ID</string>
    <string name="staff">Staff</string>
    <string name="round">Round</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>
    <string name="export_database">Export database</string>
    <string name="import_database">Import database</string>
    <string name="organize_database">Organize database</string>
    <string name="clear_database">Clear the database</string>
    <string name="permission_rationale">Contacts permissions are needed for providing completions.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="user">User</string>
    <string name="name_driver">Name</string>
    <string name="drop">Drop</string>
    <string name="finish">Finish</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pick Up</string>
    <string name="doyouwanttologout">Do you want to log out?</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="cancel">Cancel</string>
    <string name="connecting_to_server">Connecting to server</string>
    <string name="close">Close</string>
    <string name="not_found">Not found</string>
    <string name="use_offline">Use offline</string>
    <string name="server_connection">Server connection</string>
    <string name="user_not_found">Username not found in the system. Please contact the administrator.</string>
    <string name="cannot_connect_to_the_server">Cannot connect to the server .. The system will work offline.</string>
    <string name="u_or_p_incorrect">Username or password is incorrect.</string>
    <string name="checking">Checking..</string>
    <string name="serial_not_match">Serial numbers do not match.</string>
    <string name="error">Error</string>
    <string name="no_history_found">No history found in the device.</string>
    <string name="cannot_retrieve_user_data">Cannot retrieve user data from within the device.</string>
    <string name="job">Job</string>
    <string name="title_activity_maps">Map</string>
    <string name="picking_up">Picking Up</string>
    <string name="deliver">Deliver</string>
    <string name="delivery_no">Delivery No.</string>
    <string name="want_to_navigate">Want to navigate ?</string>
    <string name="navigate">OK</string>
    <string name="alert">Alert</string>
    <string name="box">Box</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_attendance">Confirm attendance?</string>
    <string name="work_pending">There is work pending. Do you want to leave this page?</string>
    <string name="finish_job">Want to finish this job?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="filterdate">Filter Date</string>
    <string name="today">Today</string>
    <string name="address">Address</string>
    <string name="appoint">Appoint</string>
    <string name="consignment">Consignment</string>
    <string name="boxes">Boxes</string>
    <string name="unit">Unit(Global)</string>
    <string name="consignment2">Cons.No</string>
    <string name="credit">Credit</string>
    <string name="cash">Cash</string>
    <string name="waybill_no">Waybill No</string>
    <string name="box_no">Box No</string>
    <string name="pay_type">Pay Type</string>
    <string name="summary">Summary</string>
    <string name="all">All</string>
    <string name="confirm2">Confirm</string>
    <string name="processing">Processing</string>
    <string name="canceled">Canceled</string>
    <string name="global_no">Global No</string>
    <string name="price">Price</string>
    <string name="remark">Ramark</string>
    <string name="enter">enter</string>
    <string name="enter_waybill_no">Enter waybillno here..</string>
    <string name="reason">Reason</string>
    <string name="picture">Picture</string>
    <string name="save">Save</string>
    <string name="order_no">Order No</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_no">Invoice No</string>
    <string name="return_">Return</string>
    <string name="reject">Reject</string>
    <string name="complete">Complete</string>
    <string name="select_all">Select All</string>
    <string name="enter_reson">Enter reason.</string>
    <string name="commented">Commented.</string>
    <string name="search">SEARCH</string>
    <string name="to">to</string>
    <string name="select">Select</string>
    <string name="sync_data">Syncing data..</string>
    <string name="job_operation">Job Operation</string>
    <string name="station">Station</string>
    <string name="sync">Sync</string>
    <string name="unselect_all">Unselect All</string>
    <string name="not_selected">Not Selected!</string>
    <string name="saving">Saving..</string>
    <string name="please_scan_all_waybill_number">Please scan all waybill numbers.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="please_enable_gps">Please enable GPS.</string>


</resources>
