<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_language"
        android:title="change_language"
        android:icon="@drawable/ic_langchange"
        app:showAsAction="always" >
        <menu>

            <item
                android:id="@+id/lang_eng"
                android:icon="@mipmap/ic_enlang"
                android:title="English"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/lang_thai"
                android:icon="@mipmap/ic_thlang"
                android:title="ไทย"
                app:showAsAction="ifRoom" />


        </menu>
    </item>
    <item
        android:id="@+id/export_data_menu"
        android:title="@string/export_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/import_data_menu"
        android:title="@string/import_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/manage_data_menu"
        android:title="@string/organize_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_data_menu"
        android:title="@string/clear_database"
        app:showAsAction="never" />
</menu>