<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scan.view.pickup.Pickup_Activity">

    <ExpandableListView
        android:id="@+id/exPandDeli"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:childDivider="@android:color/transparent"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.5dp"
        android:groupIndicator="@null"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/layoutbarcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_test"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/exPandDeli"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:id="@+id/layoutJobHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fab_label_background"
                    android:text="@string/delivery_plan"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteY="44dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabJobHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="0dp"
                    app:elevation="0dp"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_date_range_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutJobToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/fab_label_background"
                    android:text="@string/job"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="7dp"
                    tools:layout_editor_absoluteY="109dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabJobToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="0dp"
                    app:elevation="0dp"
                    app:fabSize="mini"
                    app:srcCompat="@drawable/ic_today_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>


        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="invisible" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHome3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_home_black_24dp"
        android:tint="#fff"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/exPandDeli"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        app:contentInsetEnd="5dp"
        app:contentInsetStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#fff"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imgBack_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/fabSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="8dp"
            android:visibility="gone"
            android:src="@drawable/ic_autorenew_black_24dp" />

        <ImageView
            android:id="@+id/savePickingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="8dp"
            android:src="@drawable/ic_save_black_24dp" />
        <!--        <TextView-->
        <!--            android:id="@+id/savePickingUp"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="right"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:paddingLeft="5dp"-->
        <!--            android:paddingTop="15dp"-->
        <!--            android:paddingRight="5dp"-->
        <!--            android:paddingBottom="15dp"-->
        <!--            android:text="@string/save"-->
        <!--            android:textColor="#fff"-->
        <!--            android:textStyle="bold" />-->

        <!--        <View-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="30dp"-->
        <!--            android:layout_gravity="right"-->
        <!--            android:layout_marginEnd="5dp"-->
        <!--            android:background="#DADADA" />-->

        <TextView
            android:id="@+id/bnCloseJobPick"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginEnd="13dp"
            android:paddingLeft="5dp"
            android:paddingTop="15dp"
            android:paddingRight="5dp"
            android:paddingBottom="15dp"
            android:visibility="gone"
            android:text="@string/confirm2"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headertest"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/pickup"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="16dp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutbarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edtFineWaybillPick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_waybill_no"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="12sp"
            android:imeOptions="actionSend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgCameraScan"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_check_box_checked"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imgCameraScan"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEnterWaybillNo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/barcodescanner"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/btnEnterWaybillNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/enter"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>